crates/typechecker/tests/snapshots/fixture_test__option_basic.snap
---
source: crates/typechecker/tests/fixture_test.rs
expression: snapshot
---
Some: forall f. fn(f) -> Option<f>
None: forall f. Option<f>
unwrap: fn(Option<own Int>) -> Int
test: fn() -> Int
